# Stengents

./: .gitignore  AGENTS.md  CONTEXT.md  README.md  pyproject.toml
docs/research/: adk-local-model-provider-adapter.md  adk-observability-mvp-run-record.md
src/farm_system/: README.md  __init__.py
src/farm_system/hello_world/: __init__.py  agent.py
src/stengents/: __init__.py  cli.py  harness.py
src/stengents/coding_agent/: __init__.py  agent.py
src/stengents/fixtures/normalize-index/: normalize_index.py  test_normalize_index.py
tests/: test_farm_system.py  test_run_record.py
