[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stengents"
version = "0.1.0"
description = "Reproducible evidence harnesses for coding agents"
requires-python = ">=3.11"
dependencies = [
  "google-adk",
  "litellm",
]

[project.scripts]
stengents = "stengents.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.hatch.build.targets.wheel]
packages = ["src/stengents"]
